kubernetes/apps/media/kaizoku/app/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kaizoku
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kaizoku.kube.home.arpa`)
      kind: Rule
      services:
        - name: kaizoku
          port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaizoku-external-dns
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kaizoku.kube.home.arpa
